Resgister endpoint implementd and token service added via jwt
